--- a/client/package.json
+++ b/client/package.json
@@ -31,5 +31,13 @@
   "bugs": {
     "url": "https://github.com/IsraelAdura/go-postgres-jwt-react-starter"
   },
-  "homepage": "https://github.com/IsraelAdura/go-postgres-jwt-react-starter#readme"
+  "homepage": "https://github.com/IsraelAdura/go-postgres-jwt-react-starter#readme",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.26.1"
+  }
 }
