dockerize app & minor updates

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-DB_USER=aesrael
-DB_PASSWORD=""
-DB_NAME=goapp
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=""
+POSTGRES_DB=postgres
 CLIENT_URL=http://localhost:3000
 SERVER_PORT=:8081
 JWT_KEY=secretive
