--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,7 @@
   "description": "authentication with react and go",
   "private": true,
   "dependencies": {
+    "eslint-plugin-prettier": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
@@ -38,7 +39,6 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.26.1",
-    "prettier": "^2.4.1"
+    "eslint-plugin-react": "^7.26.1"
   }
 }
